<resources>
    <string name="app_launcher_name">Messages</string>
    <string name="type_a_message">Type a message…</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="message_not_sent_touch_retry">Not sent. Touch to retry.</string>
    <string name="message_sending_error">Your message to \'%s\' has not been sent</string>
    <string name="add_person">Add Person</string>
    <string name="attachment">Attachment</string>
    <string name="no_conversations_found">No stored conversations have been found</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="reply">Reply</string>
    <string name="show_character_counter">Show a character counter at writing messages</string>
    <string name="show_phone_number">Show phone number</string>
    <string name="show_sms_remained_count">Show SMS remained count</string>
    <string name="message_send_delay">Message send delay</string>
    <string name="no_delay">No delay</string>
    <string name="delay_3s">3s</string>
    <string name="delay_5s">5s</string>
    <string name="delay_10s">10s</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="no_reply_support">Sender doesn\'t support replies</string>
    <string name="draft">Draft</string>
    <string name="draft_scheduled_snippet">Scheduled message</string>
    <string name="message_saved_in_draft">Message has been saved in draft</string>
    <string name="conversation_chogo_label">[Draft]</string>
    <string name="send">Send</string>
    <string name="sending">Sending…</string>
    <string name="sending_cancelled">Sending cancelled</string>
    <string name="cannot_send_in_airplane_mode">Can\'t send messages while Airplane mode is on</string>
    <string name="pin_conversation">Pin to the top</string>
    <string name="unpin_conversation">Unpin</string>
    <string name="forward_message">Forward</string>
    <string name="compress_error">Unable to compress image to selected size</string>
    <string name="duplicate_item_warning">Duplicate item was not included</string>
    <string name="file_attachment_vcard_name">vCard (%s)</string>
    <plurals name="and_other_contacts">
        <item quantity="one">and %d other</item>
        <item quantity="other">and %d others</item>
    </plurals>
    <string name="thread_title_multiple_format">%1$s %2$s</string>
    <string name="new_conversation">New conversation</string>
    <string name="recipients_hint">Recipients :</string>
    <string name="add_contact_or_number">Add Contact or Number…</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="grouped_list_now">Now</string>
    <plurals name="grouped_list_minutes_ago">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>
    <plurals name="grouped_list_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <string name="call_log">Call log</string>
    <string name="contacts">Contacts</string>
    <string name="no_call_log">No call history</string>
    <string name="call_log_permission_required">Call log access is needed to pick numbers from call history</string>
    <string name="done">Done</string>
    <string name="suggestions">Suggestions</string>
    <string name="members">Members</string>
    <string name="conversation_name">Conversation name</string>
    <string name="conversation_details">Conversation details</string>
    <string name="rename_conversation">Rename conversation</string>
    <string name="rename_conversation_warning">Only you can see this conversation name</string>
    <string name="scheduled_message">Scheduled message</string>
    <string name="scheduled_message_status">Scheduled message</string>
    <string name="schedule_message">Schedule message</string>
    <string name="schedule_send">Schedule send</string>
    <string name="cancel_schedule_send">Cancel schedule send</string>
    <string name="must_pick_time_in_the_future">You must pick a time in the future</string>
    <string name="schedule_send_warning">Keep the phone on and make sure there is nothing killing the app while in background.</string>
    <string name="update_message">Update message</string>
    <string name="send_now">Send now</string>
    <string name="message_details">Message details</string>
    <string name="message_details_sender">Sender : </string>
    <string name="message_details_receiver">Receiver : </string>
    <string name="message_details_sent_at">Sent at : </string>
    <string name="message_details_received_at">Received at : </string>
    <string name="message_details_report_at">Report at : </string>
    <string name="message_details_sim">SIM Card : </string>
    <string name="channel_received_sms">Received SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="secure_box">Secure Box</string>
    <string name="close_secure_box">Close Secure Box</string>
    <string name="secret_box_app_not_found" translatable="false">Secret Box app not found. Please install it.</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="me">Me</string>
    <string name="enable_custom_notifications">Enable custom notifications</string>
    <string name="customize_notifications">Customize notifications</string>
    <string name="show_notification">Show notification</string>
    <string name="notification_sound">Notification sound</string>
    <string name="allow_modify_system_settings_default_notification_sound">To sync the system default notification sound, enable \"Modify system settings\" for this app on the next screen, then return here.</string>
    <string name="delivery_report_sound">Delivery report sound</string>
    <string name="exposed_dropdown_menu">Show dropdown menu</string>
    <string name="message_bubble_type">Type %1$d</string>
    <string name="unarchive">Unarchive</string>
    <string name="empty_archive">Delete all archived conversations</string>
    <string name="archived_conversations">Archive</string>
    <string name="show_archived_conversations">Show archived conversations</string>
    <string name="archive">Archive</string>
    <string name="no_archived_conversations">No archived conversations have been found</string>
    <string name="archive_emptied_successfully">The archive has been emptied successfully</string>
    <string name="empty_archive_confirmation">Are you sure you want to empty the archive? All archived conversations will be permanently lost.</string>
    <string name="keep_conversations_archived">Keep conversations archived</string>
    <string name="restore">Restore</string>
    <string name="restore_all_messages">Restore all messages</string>
    <string name="empty_recycle_bin_messages_confirmation">Are you sure you want to empty the Recycle Bin? The messages will be permanently lost.</string>
    <string name="skip_the_recycle_bin_messages">Skip the Recycle Bin, delete messages directly</string>
    <string name="delete_whole_conversation_confirmation">Are you sure you want to delete all messages of this conversation?</string>
    <string name="archive_confirmation">Are you sure you want to archive %s?</string>
    <string name="restore_whole_conversation_confirmation">Are you sure you want to restore all messages of this conversation?</string>
    <string name="restore_confirmation">Are you sure you want to restore %s?</string>
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="keyword">Keyword</string>
    <string name="blocked_keywords">Blocked keywords</string>
    <string name="manage_blocked_keywords">Manage blocked keywords</string>
    <string name="not_blocking_keywords">You are not blocking any keywords. You may add keywords here to block all messages containing them.</string>
    <string name="add_a_blocked_keyword">Add a blocked keyword</string>
    <string name="quick_texts">Quick texts</string>
    <string name="manage_quick_texts">Manage quick texts</string>
    <string name="sms_service_center">SMS service center</string>
    <string name="invalid_smsc_number">Invalid service center number</string>
    <string name="no_quick_texts">You have no quick texts. \n You may add quick texts here to use them when sending messages.</string>
    <string name="add_a_quick_text">Add a quick text</string>
    <string name="quick_text">Quick text</string>
    <string name="export_quick_texts">Export quick texts</string>
    <string name="import_quick_texts">Import quick texts</string>
    <string-array name="default_quick_texts">
        <item>How are you</item>
        <item>Sorry, I am busy now</item>
        <item>Nice to meet you</item>
        <item>It\'s my pleasure</item>
        <item>Please call me</item>
    </string-array>
    <string name="add">Add</string>
    <string name="lock_screen_visibility">Lock screen notification visibility</string>
    <string name="sender_and_message">Sender and message</string>
    <string name="sender_only">Sender only</string>
    <string name="enable_delivery_reports">Enable delivery reports</string>
    <string name="use_delivery_report_summary">Informs delivery status of message sent</string>
    <string name="show_phonenumber_summary">Show phone number with name</string>
    <string name="show_sms_remained_count_summary">Displays left free sms count below send button</string>
    <string name="use_simple_characters">Remove accents and diacritics at sending messages</string>
    <string name="send_on_enter">Send message on pressing Enter</string>
    <string name="mms_file_size_limit">Resize sent MMS images</string>
    <string name="mms_limit_size">Limit size</string>
    <string name="mms_file_size_limit_none">No limit</string>
    <string name="outgoing_messages">Other</string>
    <string name="group_message_mms">Send group messages as MMS</string>
    <string name="send_long_message_mms">Send long messages as MMS</string>
    <string name="messages">Messages</string>
    <string name="keywords">Keywords</string>
    <string name="export_messages">Export messages</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="import_messages">Import messages</string>
    <string name="import_sms">Import SMS</string>
    <string name="import_mms">Import MMS</string>
    <string name="no_option_selected">You have to select at least one item</string>
    <string name="export_blocked_keywords">Export blocked keywords</string>
    <string name="import_blocked_keywords">Import blocked keywords</string>
    <string name="empty_destination_address">Can\'t send message to an empty number</string>
    <string name="unable_to_save_message">Unable to save message to the telephony database</string>
    <string name="error_service_is_unavailable">Couldn\'t send message, service unavailable</string>
    <string name="view_attachment">View</string>
    <string name="replace_attachment">Replace</string>
    <string name="remove_attachment">Remove</string>
    <string name="edit_slide">Edit slide</string>
    <string name="remove_slide">Remove slide</string>
    <string name="preview">Preview</string>
    <string name="previous_slide">Previous slide</string>
    <string name="next_slide">Next slide</string>
    <string name="select_conversations">Select</string>
    <string name="all_reading">Mark all read</string>
    <string name="blocked_list">Blocked list</string>
</resources>