<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource,AlwaysShowAction">
    <item
        android:id="@+id/conversation_details"
        android:icon="@drawable/ic_cmn_info"
        android:title="@string/conversation_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/rename_conversation"
        android:icon="@drawable/ic_edit_vector"
        android:title="@string/rename_conversation"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_number_to_contact"
        android:title="@string/add_number_to_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/block_number"
        android:showAsAction="never"
        android:title="@string/block_number"
        app:showAsAction="never"
        android:icon="@drawable/ic_cmn_call_miss"/>
    <item
        android:id="@+id/restore"
        android:showAsAction="never"
        android:title="@string/restore_all_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/mark_as_unread"
        android:showAsAction="never"
        android:title="@string/mark_as_unread"
        app:showAsAction="never"
        android:icon="@drawable/ic_cmn_list_static"/>
    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_vector"
        android:title="@string/archive"
        app:showAsAction="never" />
    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_unarchive_vector"
        android:title="@string/unarchive"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_cmn_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/select_messages"
        android:icon="@drawable/ic_cmn_rectangle_uncheck"
        android:title="@string/select_conversations"
        app:showAsAction="never" />
</menu>
