<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource,AlwaysShowAction">
    <group
        android:id="@+id/menu_group_select_conversations"
        android:checkableBehavior="single">
        <item
            android:id="@+id/select_conversations"
            android:title="@string/select_conversations"
            android:showAsAction="never" />
    </group>
    <group
        android:id="@+id/menu_group_all_reading"
        android:checkableBehavior="single">
        <item
            android:id="@+id/all_reading"
            android:title="@string/all_reading"
            android:showAsAction="never" />
    </group>
    <group
        android:id="@+id/menu_group_blocked_list"
        android:checkableBehavior="single">
        <item
            android:id="@+id/blocked_list"
            android:title="@string/blocked_list"
            android:showAsAction="never" />
    </group>
    <group
        android:id="@+id/menu_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:showAsAction="never" />
    </group>
</menu>
