<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thread_attachment_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/section_holder_stroke"
    android:orientation="vertical">

    <include
        android:id="@+id/vcard_strip"
        layout="@layout/item_attachment_vcard_strip" />

    <LinearLayout
        android:id="@+id/media_attachment_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/small_margin">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/media_attachment_holder"
        android:layout_width="0dp"
        android:layout_height="@dimen/attachment_media_preview_height"
        android:layout_weight="1"
        android:foreground="@drawable/ripple_all_corners_16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:scaleType="centerCrop" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/play_icon"
            android:layout_width="@dimen/play_outline_size"
            android:layout_height="@dimen/play_outline_size"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:src="@drawable/ic_vector_play_circle_outline"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/compression_progress"
            android:layout_width="@dimen/play_outline_size"
            android:layout_height="@dimen/play_outline_size"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/audio_indicator"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="bottom|start"
            android:layout_margin="@dimen/small_margin"
            android:alpha="0.85"
            android:elevation="4dp"
            android:src="@drawable/ic_music_vector"
            android:visibility="gone"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/media_size_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:background="#88000000"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="45K/300K"
            tools:visibility="visible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/media_attachment_actions"
        android:layout_width="@dimen/attachment_media_action_button_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/small_margin"
        android:paddingEnd="@dimen/tiny_margin">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_attachment_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/attachment_media_action_button_height"
            android:text="@string/view_attachment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/replace_attachment_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/attachment_media_action_button_height"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/replace_attachment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove_attachment_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/attachment_media_action_button_height"
            android:text="@string/remove_attachment" />
    </LinearLayout>

    </LinearLayout>

</LinearLayout>
